--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
     "grunt-browser-sync": "^2.1.2",
+    "grunt-build-control": "^0.5.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
@@ -24,7 +25,7 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.1.0"
+    "time-grunt": "^1.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -46,7 +47,5 @@
     }
   },
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-build-control": "^0.5.0"
   }
 }
