--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,10 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "typekit-load": "~0.1.2",
-    "FitText.js": "~1.2.0",
     "countUp.js": "~1.5.3",
     "fontawesome": "~4.4.0",
-    "mailcheck": "~1.1.1"
+    "mailcheck": "~1.1.1",
+    "FitText.js": "jquery-fittext#^1.2.0"
   },
   "devDependencies": {
     "chai": "~3.2.0",
